--- a/WebApplication1/WebApplication1/Views/ChatRoom/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/ChatRoom/Index.cshtml
@@ -1,7 +1,40 @@
-﻿
+﻿@model IEnumerable<WebApplication1.Models.Comment>
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2 class="text-success">Welcome, you are registered</h2>
+<h2 class="text-success text-center">Welcom to Chat Room!</h2>
 
+<table class="table text-center">
+    @foreach (var comment in Model) {
+    <tr style="border:1px solid black ">
+        <td>
+            <span style="margin-right:15px; font-size:16px; color:green">
+                @comment.user.Username
+            </span>
+            <span style="font-size:20px">
+                @Html.DisplayFor(modelItem => comment.Text)
+            </span>
+            <span style="margin-left:10px">
+                @comment.CreatedOn
+            </span>
+            @foreach (var reply in comment.Replies)
+            {
+                <br />
+                <span style="margin-right:15px; font-size:16px; color:darkslateblue">
+                    @comment.user.Username
+                </span>
+                <span style="font-size:19px">
+                    @reply.Text
+                </span>
+                <span style="margin-left:10px">
+                    @reply.CreatedOn
+                </span>
+            }
+        </td>
+    </tr>
+    }
+
+
+    </table>
