--- a/WebApplication1/WebApplication1/Views/ChatRoom/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/ChatRoom/Index.cshtml
@@ -5,36 +5,54 @@
 }
 
 <h2 class="text-success text-center">Welcom to Chat Room!</h2>
+@using (Html.BeginForm("PostComment", "ChatRoom", FormMethod.Post))
+{
+    <input class="pull-right" type="text" name="CommentText" placeholder="Type new comment..." style="width:700px; height:60px; font-size:20px; margin-top:10px" />
+    <br /><br /><br /><br />
+    <input type="submit" value="Post Comment" class="btn btn-success pull-right" style="margin-bottom:10px;"/>
+}
+
+
 
 <table class="table text-center">
-    @foreach (var comment in Model) {
-    <tr style="border:1px solid black ">
-        <td>
-            <span style="margin-right:15px; font-size:16px; color:green">
-                @comment.user.Username
-            </span>
-            <span style="font-size:20px">
-                @Html.DisplayFor(modelItem => comment.Text)
-            </span>
-            <span style="margin-left:10px">
-                @comment.CreatedOn
-            </span>
-            @foreach (var reply in comment.Replies)
-            {
-                <br />
-                <span style="margin-right:15px; font-size:16px; color:darkslateblue">
+    @foreach (var comment in Model)
+    {
+        <tr style="border:1px solid black ">
+            <td>
+                <span style="margin-right:15px; font-size:16px; color:green">
                     @comment.user.Username
                 </span>
-                <span style="font-size:19px">
-                    @reply.Text
+                <span style="font-size:20px">
+                    @Html.DisplayFor(modelItem => comment.Text)
                 </span>
                 <span style="margin-left:10px">
-                    @reply.CreatedOn
+                    @comment.CreatedOn
                 </span>
-            }
-        </td>
-    </tr>
+                @foreach (var reply in comment.Replies)
+                {
+                    <br />
+                    <span style="margin-right:15px; font-size:16px; color:darkslateblue">
+                        @comment.user.Username
+                    </span>
+                    <span style="font-size:19px">
+                        @reply.Text
+                    </span>
+                    <span style="margin-left:10px">
+                        @reply.CreatedOn
+                    </span>
+                }
+                <br />
+                @using (Html.BeginForm("PostReply", "ChatRoom", FormMethod.Post))
+                {
+                    <input type="text" name="Reply" placeholder="Type reply..." style="width:100%; height:100px; font-size:20px; margin-top:10px" />
+                    <br />
+                    <input type="hidden" name="CID" value="@comment.Id" />
+                    <input type="submit" value="Post Reply" class="btn btn-success" style="margin-top:10px" />
+                }
+
+            </td>
+        </tr>
     }
 
 
-    </table>
+</table>
