--- a/WebApplication1/WebApplication1/Views/ChatRoom/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/ChatRoom/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
 <h2 class="text-success text-center">Welcom to Chat Room!</h2>
