--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -1,31 +1,69 @@
-﻿@{
+﻿@model IEnumerable<WebApplication1.Models.Product>
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<h2>Product List</h2>
+
+@using (Ajax.BeginForm("Index", "Home", null, new AjaxOptions { InsertionMode = InsertionMode.Replace, }))
+{
+    @Html.AntiForgeryToken()
+<div>
+    @Html.ActionLink("Alphabetisch", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFiler },
+        new { @class = "btn btn-success btn-sm", @style = "margin-top:10px; margin-bottom:10px" })
+    @Html.ActionLink("Neueste", "Index", new { sortOrder = ViewBag.DateSortParm, currentFilter = ViewBag.CurrentFilter },
+        new { @class = "btn btn-success btn-sm", @style = "margin-top:10px; margin-bottom:10px" })
+
+    <p>
+        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as String, new { placeholder = "Suche nach Wort", id = "SearchString" })
+        <input type="submit" value="Search" id="btnSearch" class="btn btn-success btn-sm" style="margin-left:1px" />
+    </p>
+</div>
+}
+
+
+<div id="ProductList">
+    @Html.Partial("ProductList", Model)
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+@section scripts
+{
+    <script type="text/javascript">
+        window.addEventListener("popstate", function (e) {
+            $.ajax({
+                url: location.href,
+                success: function (result) {
+                    $('#ProductList').html(result);
+                }
+            });
+        });
+
+        function ChangeUrl(page, url) {
+            if (typeof (history.pushState) != "undefined") {
+                var obj = { Page: page, Url: url };
+                history.pushState(null, obj.Page, obj.Url);
+            } else {
+                alert("Browser does not support HTML5.");
+            }
+        }
+
+        function search() {
+            $.ajax({
+                url: "/Home/Index?searchString=" + $('#SearchString').val(),
+                success: function (result) {
+                    ChangeUrl("index", "/Home/Index?searchString=" + $('#SearchString').val());
+                    $('#ProductList').html(result);
+                }
+            });
+        }
+
+        $(document).ready(function () {
+            $("#SearchString").keyup(function () {
+                var wortName = $("#SearchString").val();
+                search(wortName);
+            })
+        })
+    </script>
+}
+
